package protocol;


message Account {
	
	//客户端消息 
	//pid = 1 注册账号
	message RegisterPlayer {
		optional string playername = 1;
		optional string passworld = 2;
	}
	
	//pid = 1 注册账号 返回
	message RegisterResult {
		optional int32 result = 1;//0:成功 1:注册失败 4：注册名被占用
	}
	
	//pid = 2 登录账号
	message LoginInfo{
		optional string playername = 1;  
		optional string passworld = 2;
	}

	//pid = 2 登录账号 登录账号返回
	message LoginResult {
		optional int32 result = 1;//5:登录成功 2：登录失败 6：禁止登录
		optional string gameserver = 2;//游戏逻辑服务器地址
		optional int32 player_id = 3;//玩家申请的id
	}
	
	message ServerInfo {
		optional int32 type = 1;//1优 2良好 3繁忙
		optional int32 server_id = 2;//游戏服务器id
		optional string server_address = 3;//游戏服务器地址
	}
	
	//pid = 3 获取服务器列表
	message GetServerList {
	}
		
	//pid = 3 获取服务器 返回
	message ServerListResult {
		repeated ServerInfo server_info = 1;//游戏服务器列表
	}
	
	//pid = 4 获取自己登录过服务器列表
	message GetMyServerList {
	}
		
	//pid = 4 获取自己登录过的服务器 返回
	message MyServerListResult {
		optional int32 last_server_id = 1;//上次登录游戏服
		repeated ServerInfo my_server_list = 2;//自己登录过所有的服务器
	}
	
	//发送给game消息
	
	//pid = 101 返回游戏服在线人数
	message GameResult {
		optional int32 count = 1;
		optional string game_address = 2;
		optional int32 game_id = 3;
	}
	
	//pid = 102
	message NoteGame {
		optional int32 player_id = 1;
	}
}
